# chembl-downloader

./: .bumpversion.cfg  .cruft.json  .flake8  .gitignore  .readthedocs.yml  CITATION.cff  Indication EFO Mismatches.ipynb  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/workflows/: cruft.yml  tests.yml
docs/_data/: summary-diff.tsv  summary.tsv
docs/source/: cli.rst  conf.py  configuration.rst  extras.rst  fingerprints.rst  index.rst  installation.rst  queries.rst  reference.rst  sdf.rst  sql.rst  usage.rst
notebooks/: README.md  chebi-mappings.ipynb  cortes-ciriano-refresh.ipynb  drug-indications.ipynb  refresh-static-data.ipynb
paper/: README.md  build.sh  extras.md  paper.bib  paper.md
src/chembl_downloader/: __init__.py  __main__.py  api.py  cli.py  contrib.py  downloader_checker.py  history.py  queries.py
tests/: __init__.py  test_api.py  test_queries.py
