##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = chembl_downloader
version = 0.0.1-dev
description = Download, open, and query ChEMBL through SQLite
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    click
    more_click
    bioversions
    pystow

zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
