##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = chembl_downloader
version = 0.3.1-dev
description = Reproducibly download, open, parse, and query ChEMBL
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/cthoyt/chembl_downloader
download_url = https://github.com/cthoyt/chembl_downloader/releases
project_urls =
    Bug Tracker = https://github.com/cthoyt/chembl_downloader/issues
    Source Code = https://github.com/cthoyt/chembl_downloader

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    ChEMBL
    sqlite

[options]
install_requires =
    click
    more_click
    pystow

zip_safe = false
include_package_data = True
python_requires = >=3.7

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
pandas =
    pandas
rdkit =
    rdkit-pypi

[options.entry_points]
console_scripts =
    chembl_downloader = chembl_downloader.cli:main

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    S310
    # line break before binary operator
    W503
    # XML stuff
    S405
    S314
    # Whitespace stuff
    E203
    # Pickle stuff
    S301
    S403
    # FTP
    S402
    S321
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs
max-complexity = 25
max-line-length = 120
import-order-style = pycharm
application-import-names =
    chembl_downloader
    tests
